--- a/maandstaat-incrementer/pom.xml
+++ b/maandstaat-incrementer/pom.xml
@@ -9,6 +9,11 @@
             <artifactId>dotenv-kotlin</artifactId>
             <version>6.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
