--- a/maandstaat-incrementer/gui/pom.xml
+++ b/maandstaat-incrementer/gui/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version> <!-- Latest stable version -->
+        </dependency>
         <!-- Add GUI dependencies here, e.g., JavaFX -->
     </dependencies>
 
