--- a/maandstaat-incrementer/.config.properties
+++ b/maandstaat-incrementer/.config.properties
@@ -1,5 +1,5 @@
 #Application Configuration
-#Mon Oct 13 14:31:13 CEST 2025
-CUSTOMER_SUGGESTIONS={\n  "Rijkzwaan"\: [\n    "Deep Dive",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ],\n  "Bidfood"\: [\n    "Deep Dive",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ],\n  "Klant 3"\: [\n    "Deep Dive",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ]\n}
+#Mon Oct 13 14:49:16 CEST 2025
+CUSTOMER_SUGGESTIONS={\n  "Rijkzwaan"\: [\n    "Karl",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ],\n  "Bidfood"\: [\n    "Deep Dive",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ],\n  "Klant 3"\: [\n    "Deep Dive",\n    "Planning",\n    "Planning poker",\n    "Refinement",\n    "Stand Up"\n  ]\n}
 FILE_PATH=/Users/karlfredriksson/Documents/Maandstaat/MaaandstaatDemo.xlsm
 NUMBER_OF_CUSTOMERS=3
